# django_atomics

./: .gitignore  MANIFEST.in  Pipfile  README.md  requirements.txt  setup.cfg
django_atomics/: __init__.py  apps.py  base.py  component.py  components.py  permissions.py  renderers.py  utils.py  version.py
django_atomics/atoms/: __init__.py  basics.py  bootstrap.py  containers.py  images.py
django_atomics/templates/: index.html
django_atomics/templates/atomics/: index.html
django_atomics/templatetags/: atomics_tags.py
example/: settings.py  urls.py
example/app/: apps.py  views.py
example/app/components/: sidebar.py
example/app/templates/: index.html
